--- a/05-lab.Rmd
+++ b/05-lab.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Lab 05 - Data Wrangling"
-output: html_document
+output: github_document
+always_allow_html: true
 ---
 
 # Learning goals
@@ -83,10 +84,13 @@ Once you are done setting up the project, you can now start working with the MET
 ## Setup in R
 
 1. Load the `data.table` (and the `dtplyr` and `dplyr` packages if you plan to work with those).
-
+```{r}
+library(data.table)
+met<- fread("/Users/zhenglong/OneDrive - University of Southern California/courses/PM566/week5/lab/met.gz")
+```
 2. Load the met data from https://raw.githubusercontent.com/USCbiostats/data-science-data/master/02_met/met_all.gz, and also the station data. For the later, you can use the code we used during lecture to pre-process the stations data:
 
-```{r stations-data, eval = FALSE}
+```{r stations-data, eval=TRUE}
 # Download the data
 stations <- fread("ftp://ftp.ncdc.noaa.gov/pub/data/noaa/isd-history.csv")
 stations[, USAF := as.integer(USAF)]
@@ -114,9 +118,27 @@ stations <- stations[n == 1,][, n := NULL]
 What is the median station in terms of temperature, wind speed, and atmospheric pressure? Look for the three weather stations that best represent continental US using the `quantile()` function. Do these three coincide?
 
 ```{r}
+#obtaining averages per station
+met<- merge( x= met, y= stations, by.x= "USAFID", by.y = "USAF",
+             all.x = TRUE, all.y = FALSE)
+met[1:5, .(USAFID, WBAN, STATE)]
 
+met_stations <- met[ , .(temp = mean(temp, na.rm = T),
+                        wind.sp = mean(wind.sp,na.rm = T),
+                        atm.press = mean(atm.press,na.rm = T)), 
+                        by = .(USAFID, STATE)]
+# computering the median
+met_stations[, temp50  :=quantile(temp,probs = .5, na.rm = T)]
+met_stations[, windsp50  :=quantile(wind.sp,probs = .5, na.rm = T)]
+met_stations[, atmp50  :=quantile(atm.press,probs = .5, na.rm = T)]
+
+#filter the data
+met_stations[which.min(abs(temp-temp50))]
+met_stations[which.min(abs(wind.sp-windsp50))]
+met_stations[which.min(abs(atm.press-atmp50))]
 ```
 
+These three do not coincide.
 
 Knit the document, commit your changes, and Save it on GitHub. Don't forget to add `README.md` to the tree, the first time you render it.
 
@@ -125,6 +147,26 @@ Knit the document, commit your changes, and Save it on GitHub. Don't forget to a
 Just like the previous question, you are asked to identify what is the most representative, the median, station per state. This time, instead of looking at one variable at a time, look at the euclidean distance. If multiple stations show in the median, select the one located at the lowest latitude.
 
 ```{r}
+
+# computing the median
+met_stations[, temp50s  :=quantile(temp,probs = .5, na.rm = T), by = STATE]
+met_stations[, windsp50s  :=quantile(wind.sp,probs = .5, na.rm = T), by = STATE]
+met_stations[, atmp50s  :=quantile(atm.press,probs = .5, na.rm = T), by = STATE]
+
+#temperature 
+met_stations[, tempdif := which.min(abs(temp-temp50s)), ,by = STATE]
+met_stations[, recordid := 1:.N, by = STATE]
+met_temp <- met_stations[recordid == tempdif, .(USAFID,temp,temp50, STATE)]
+met_temp
+
+#wind.sp
+met_stations[, tempdif :=(abs(wind.sp-windsp50s)), ,by = STATE]
+met_stations[recordid == tempdif, .(USAFID,wind.sp,windsp50, STATE)]
+
+
+#atm.press
+met_stations[, tempdif :=(abs(atm.press-atmp50s)), ,by = STATE]
+met_stations[recordid == tempdif, .(USAFID,atm.press,atmp50, STATE)]
 
 ```
 
@@ -136,6 +178,48 @@ For each state, identify what is the station that is closest to the mid-point of
 
 ```{r}
 
+met_stations <- unique(met[, .(USAFID, STATE, lon, lat)])
+
+met_stations[, n := 1:.N, by = USAFID]
+met_stations <- met_stations[n ==1]
+# .SD is a short cut code
+# met_stations[, .SD[1], by = USAFID]
+
+met_stations[ , lat_mid := (max(lat) - min(lat))/2, by = STATE]
+met_stations[ , lon_mid := (max(lon) - min(lon))/2, by = STATE]
+
+#looking at the distance
+met_stations[, distance := sqrt((lat - lat_mid)^2 + (lon - lon_mid)^2)]
+met_stations[, minrecord := which.min(distance), by = STATE]
+met_stations[, n := 1:.N, by = STATE]
+met_location<- met_stations[n == minrecord, .(USAFID, STATE, lat,lon)]
+met_location
+```
+```{r question3 merge-lon~lat}
+all_stations <- met[, .(USAFID, STATE, lat,lon)][, .SD[1], by ="USAFID"]
+ #recording lon and lat from the original dataset
+met_temp <- merge(
+  x = met_temp, y= all_stations,
+  by = "USAFID",
+  all.x = TRUE, all.y = FALSE
+)
+
+```
+```{r}
+# combine the data set
+library(leaflet)
+dat1 <- met_location[, .(lon,lat)]
+dat1[, type := "center of the state"]
+
+dat2 <- met_temp[, .(lon,lat)]
+dat2[, type := "center of the temperature"]
+
+dat <- rbind(dat1, dat2)
+rh_pal <- colorFactor(c('blue','red'), domain = as.factor(dat$type))
+
+leaflet(dat) %>% 
+  addProviderTiles("OpenStreetMap") %>% 
+  addCircles(lng = ~lon, lat = ~lat, color=~rh_pal(type), opacity=1, fillOpacity=1, radius=500)
 ```
 
 Knit the doc and save it on GitHub.
@@ -151,7 +235,12 @@ Start by computing the states' average temperature. Use that measurement to clas
 - High: temp >= 25
 
 ```{r}
-
+#computing the states' average temperature
+temp_ave <- met[ , .(temp = mean(temp, na.rm = T)), by = .(USAFID, STATE)]
+temp_ave[, .temp_level := ifelse(temp <20, low),
+         ]
+temp_ave[, .temp := ifelse(temp >=25, High)]
+temp_ave[, .temp := ifelse((temp <25)|(temp >=20), Mid)]
 ```
 
 Once you are done with that, you can compute the following:
@@ -165,6 +254,8 @@ Once you are done with that, you can compute the following:
 All by the levels described before.
 
 ```{r}
+
+
 
 ```
 
