HW03 https://github.com/USCbiostats/PM566/issues/28

--- a/HW02/Week5_assignment.Rmd
+++ b/HW02/Week5_assignment.Rmd
@@ -2,9 +2,10 @@
 title: "PM566_ HW02"
 author: "Luqing Ren"
 date: "9/18/2020"
-output: html_document
-editor_options: 
-  chunk_output_type: console
+output: github_document
+always_allow_html: true
+
+
 ---
 
 ```{r setup, include=FALSE}
