--- a/HW04/HW04.md
+++ b/HW04/HW04.md
@@ -44,9 +44,9 @@ microbenchmark::microbenchmark(
 ```
 
     ## Unit: relative
-    ##          expr      min       lq     mean   median       uq     max neval cld
-    ##     fun1(dat) 8.129672 9.828734 7.619884 10.16599 11.28452 2.28091   100   b
-    ##  fun1alt(dat) 1.000000 1.000000 1.000000  1.00000  1.00000 1.00000   100  a
+    ##          expr      min       lq     mean   median       uq       max neval cld
+    ##     fun1(dat) 8.855226 9.018442 4.629362 9.000144 8.751778 0.2324405   100   b
+    ##  fun1alt(dat) 1.000000 1.000000 1.000000 1.000000 1.000000 1.0000000   100  a
 
 ``` r
 # Test for the second
@@ -57,9 +57,9 @@ microbenchmark::microbenchmark(
 ```
 
     ## Unit: relative
-    ##          expr      min       lq     mean   median       uq      max neval cld
-    ##     fun2(dat) 27.29059 22.96664 16.78285 22.16029 19.67903 3.939947   100   b
-    ##  fun2alt(dat)  1.00000  1.00000  1.00000  1.00000  1.00000 1.000000   100  a
+    ##          expr      min      lq     mean   median       uq      max neval cld
+    ##     fun2(dat) 27.93649 22.9086 13.13191 22.43861 21.55472 1.148734   100   b
+    ##  fun2alt(dat)  1.00000  1.0000  1.00000  1.00000  1.00000 1.000000   100  a
 
 # Problem 2:Make things run faster with parallel computing
 
@@ -92,7 +92,7 @@ system.time({
     ## [1] 3.14124
 
     ##    user  system elapsed 
-    ##   4.472   1.409   6.152
+    ##   4.529   1.454   6.276
 
 Rewrite the previous code using parLapply() to make it run faster.
 
@@ -112,7 +112,7 @@ system.time({
     ## [1] 3.141482
 
     ##    user  system elapsed 
-    ##   0.007   0.002   2.442
+    ##   0.006   0.001   2.390
 
 # SQL
 
